--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "upload",
+  "name": "angular-file",
   "version": "1.0.0",
   "description": "Angular + Bootstrap File Upload Drag and Drop",
-  "main": "app.js",
+  "main": [
+    "dist/file.css",
+    "dist/file.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
