--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "angular-file",
   "version": "1.0.0",
   "description": "Angular + Bootstrap File Upload Drag and Drop",
-  "main": [
-    "dist/file.css",
-    "dist/file.js"
-  ],
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
