--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Alfredo Barron <alfredobarronc@gmail.com>"
   ],
-  "description": "Angular + Bootstrap File Upload Drag and Drop",
+  "description": "File Upload Drag and Drop",
   "main": [
     "dist/file.css",
     "dist/file.js"
