--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "angular-file",
-  "version": "1.0.1",
+  "name": "angular-mdr-file",
+  "version": "1.0.2",
   "description": "File Upload Drag and Drop",
   "main": [
-    "dist/angular-file.css",
-    "dist/angular-file.js"
+    "dist/mdr-file.css",
+    "dist/mdr-file.js"
   ],
   "authors": [
-    "Alfredo Barron <alfredobarronc@gmail.com>"
+    "Alfredo Barron"
   ],
   "license": "MIT",
   "keywords": [
@@ -22,8 +22,7 @@
   "moduleType": [],
   "homepage": "",
   "ignore": [
-    "src",
-    "examples"
+    "**/.*"
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
