update name package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-mdr-file",
+  "name": "mdr-angular-file",
   "version": "1.0.2",
   "description": "File Upload Drag and Drop",
   "main": "index.js",
